--- a/Vistas/Vistas.csproj
+++ b/Vistas/Vistas.csproj
@@ -73,6 +73,9 @@
     <Compile Include="winMesas.xaml.cs">
       <DependentUpon>winMesas.xaml</DependentUpon>
     </Compile>
+    <Compile Include="winUnidadesDeMedida.xaml.cs">
+      <DependentUpon>winUnidadesDeMedida.xaml</DependentUpon>
+    </Compile>
     <Compile Include="winWaiterMenu.xaml.cs">
       <DependentUpon>winWaiterMenu.xaml</DependentUpon>
     </Compile>
@@ -141,6 +144,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="winMesas.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="winUnidadesDeMedida.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
