--- a/ClasesBase/ClasesBase.csproj
+++ b/ClasesBase/ClasesBase.csproj
@@ -62,7 +62,7 @@
     </Compile>
     <Compile Include="Rol.cs" />
     <Compile Include="TrabajarArticulos.cs" />
-    <Compile Include="TrabajarCliente.cs" />
+    <Compile Include="TrabajarClientes.cs" />
     <Compile Include="Unidad_Medida.cs" />
     <Compile Include="Usuario.cs" />
   </ItemGroup>
