--- a/Vistas/Vistas.csproj
+++ b/Vistas/Vistas.csproj
@@ -71,6 +71,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="ABMArticulos.xaml.cs">
+      <DependentUpon>ABMArticulos.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Controls\UCLogin.xaml.cs">
       <DependentUpon>UCLogin.xaml</DependentUpon>
     </Compile>
@@ -105,6 +108,10 @@
     <Compile Include="winWaiterMenu.xaml.cs">
       <DependentUpon>winWaiterMenu.xaml</DependentUpon>
     </Compile>
+    <Page Include="ABMArticulos.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Controls\UCLogin.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
