--- a/ClasesBase/ClasesBase.csproj
+++ b/ClasesBase/ClasesBase.csproj
@@ -61,6 +61,7 @@
     <Compile Include="TrabajarArticulos.cs" />
     <Compile Include="TrabajarCategorias.cs" />
     <Compile Include="TrabajarClientes.cs" />
+    <Compile Include="TrabajarMesas.cs" />
     <Compile Include="TrabajarUM.cs" />
     <Compile Include="Unidad_Medida.cs" />
     <Compile Include="Usuario.cs" />
