--- a/ClasesBase/app.config
+++ b/ClasesBase/app.config
@@ -4,7 +4,7 @@
     </configSections>
     <connectionStrings>
         <add name="ClasesBase.Properties.Settings.pasteleriaConnectionString"
-            connectionString="Data Source=.\SQLEXPRESS;AttachDbFilename=&quot;C:\Users\yidcc\OneDrive\Documentos\APU III\2 cuatrimestre\LPOO II\PROYECTOS\LPOOII-Grupo2\pasteleria.mdf&quot;;Integrated Security=True;Connect Timeout=30;User Instance=True"
+            connectionString="Data Source=.\SQLEXPRESS;AttachDbFilename=D:\Trabajos\lpooII-grupo-2\pasteleria.mdf;Integrated Security=True;Connect Timeout=30;User Instance=True"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
 </configuration>
