--- a/Vistas/Vistas.csproj
+++ b/Vistas/Vistas.csproj
@@ -117,6 +117,9 @@
     <Compile Include="winVistaPrevia.xaml.cs">
       <DependentUpon>winVistaPrevia.xaml</DependentUpon>
     </Compile>
+    <Compile Include="winVistaPreviaPedido.xaml.cs">
+      <DependentUpon>winVistaPreviaPedido.xaml</DependentUpon>
+    </Compile>
     <Compile Include="winWaiterMenu.xaml.cs">
       <DependentUpon>winWaiterMenu.xaml</DependentUpon>
     </Compile>
@@ -225,6 +228,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="winVistaPrevia.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="winVistaPreviaPedido.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
