--- a/Vistas/Vistas.csproj
+++ b/Vistas/Vistas.csproj
@@ -84,6 +84,9 @@
       <DependentUpon>UCLogin.xaml</DependentUpon>
     </Compile>
     <Compile Include="ConversorDeEstados.cs" />
+    <Compile Include="winABMClientes.xaml.cs">
+      <DependentUpon>winABMClientes.xaml</DependentUpon>
+    </Compile>
     <Compile Include="winABMUsuarios.xaml.cs">
       <DependentUpon>winABMUsuarios.xaml</DependentUpon>
     </Compile>
@@ -203,6 +206,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Styles\StylesWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="winABMClientes.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
