--- a/Vistas/Vistas.csproj
+++ b/Vistas/Vistas.csproj
@@ -58,6 +58,10 @@
     </StartupObject>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="FontAwesome.WPF, Version=4.7.0.37774, Culture=neutral, PublicKeyToken=0758b07a11a4f466, processorArchitecture=MSIL">
+      <HintPath>..\packages\FontAwesome.WPF.4.7.0.9\lib\net40\FontAwesome.WPF.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
@@ -131,6 +135,9 @@
     </Compile>
     <Compile Include="winModificacionHistorialLogin.xaml.cs">
       <DependentUpon>winModificacionHistorialLogin.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="winNuevoPedido.xaml.cs">
+      <DependentUpon>winNuevoPedido.xaml</DependentUpon>
     </Compile>
     <Compile Include="winPedidos.xaml.cs">
       <DependentUpon>winPedidos.xaml</DependentUpon>
@@ -273,6 +280,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="winNuevoPedido.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="winPedidos.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -321,6 +332,7 @@
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <None Include="app.config" />
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
