--- a/ClasesBase/app.config
+++ b/ClasesBase/app.config
@@ -4,7 +4,7 @@
     </configSections>
     <connectionStrings>
         <add name="ClasesBase.Properties.Settings.pasteleriaConnectionString"
-            connectionString="Data Source=.\SQLEXPRESS;AttachDbFilename=&quot;D:\-N-\Trabajos\3° APU\LPOO II\TRABAJO PRÁCTICO\LPOOII-Grupo2\pasteleria.mdf&quot;;Integrated Security=True;Connect Timeout=30;User Instance=True"
+            connectionString="Data Source=.\SQLEXPRESS;AttachDbFilename=&quot;D:\DESCARGAS\3er Año APU\2do Cuatrimestre\LPOO II\LPOOII-Grupo2\pasteleria.mdf&quot;;Integrated Security=True;Connect Timeout=30;User Instance=True"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
 </configuration>
